--- a/index.html
+++ b/index.html
@@ -63,22 +63,13 @@
                 </div>
             </div>
         </header>
-        <section class="sec first-section">
+        <section class="sec slider">
+            <h2>슬라이더</h2>
             <div class="container">
-                <div id="slider-wrap">
-                    <ul id="slider">
-                        <li>
-                            <img src="./images/01.jpg" alt="첫 번째 슬라이드">
-                        </li>
-                        <li>
-                            <img src="./images/02.jpg" alt="두 번째 슬라이드">
-                        </li>
-                        <li>
-                            <img src="./images/03.jpg" alt="세 번째 슬라이드">
-                        </li>
-                    </ul>
-                    <div class="btn" id="next">▶</div>
-                    <div class="btn" id="previous">◀</div>
+                <div class="inner">
+                    <div class="img-box"><a href="#"><img src="./images/01.jpg" alt=""></a></div>
+                    <div class="img-box"><a href="#"><img src="./images/02.jpg" alt=""></a></div>
+                    <div class="img-box"><a href="#"><img src="./images/03.jpg" alt=""></a></div>
                 </div>
             </div>
         </section>
@@ -189,7 +180,7 @@
             <div class="container">
                 <div class="inner">
                     <div class="footer-logo">
-                        <a href="./index.html">로고</a>
+                        <h2><a href="./index.html">로고</a></h2>
                     </div>
                     <div>copyright</div>
                     <div class="f-site">
