--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 </div>
             </div>
         </header>
-        <section class="sec slider">
+        <section class="slider">
             <h2>슬라이더</h2>
             <div class="container">
                 <div class="inner">
@@ -73,7 +73,7 @@
                 </div>
             </div>
         </section>
-        <section class="sec second-section">
+        <section class="second-section">
             <div class="container">
                 <div class="notice">
                     <h2>공지사항</h2>
